--- a/BridgeShooter/BridgeShooter.vcxproj.filters
+++ b/BridgeShooter/BridgeShooter.vcxproj.filters
@@ -153,12 +153,14 @@
     <ClCompile Include="Factory.cpp">
       <Filter>소스 파일\Bridge\Factory\Super</Filter>
     </ClCompile>
-
     <ClCompile Include="ReverseSinePattern.cpp">
       <Filter>소스 파일\Pattern</Filter>
     </ClCompile>
     <ClCompile Include="SSJFactory.cpp">
       <Filter>소스 파일\Bridge\Factory</Filter>
+    </ClCompile>
+    <ClCompile Include="HPgauge.cpp">
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -281,6 +283,9 @@
     </ClInclude>
     <ClInclude Include="ReverseSinePattern.h">
       <Filter>소스 파일\Pattern</Filter>
+    </ClInclude>
+    <ClInclude Include="HPgauge.h">
+      <Filter>소스 파일</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
