씬매니저 생성

--- a/BridgeShooter/BridgeShooter.vcxproj
+++ b/BridgeShooter/BridgeShooter.vcxproj
@@ -165,12 +165,15 @@
     <ClCompile Include="ReflectPattern.cpp" />
     <ClCompile Include="ReverseSinePattern.cpp" />
     <ClCompile Include="ReverseSpiralPattern.cpp" />
+    <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="SelectPlayer.cpp" />
     <ClCompile Include="SineFactory.cpp" />
     <ClCompile Include="SinePattern.cpp" />
     <ClCompile Include="SpaceShip.cpp" />
     <ClCompile Include="Planet04.cpp" />
     <ClCompile Include="SpiralPattern.cpp" />
     <ClCompile Include="SSJFactory.cpp" />
+    <ClCompile Include="Title.cpp" />
     <ClCompile Include="Unit.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -182,6 +185,7 @@
     <ClInclude Include="Factory.h" />
     <ClInclude Include="BasicPattern.h" />
     <ClInclude Include="BoomerangPattern.h" />
+    <ClInclude Include="GameScene.h" />
     <ClInclude Include="JinHwang.h" />
     <ClInclude Include="Planet04Factory.h" />
     <ClInclude Include="JinHwangFactory.h" />
@@ -199,12 +203,15 @@
     <ClInclude Include="ReflectPattern.h" />
     <ClInclude Include="ReverseSinePattern.h" />
     <ClInclude Include="ReverseSpiralPattern.h" />
+    <ClInclude Include="SceneManager.h" />
+    <ClInclude Include="SelectPlayer.h" />
     <ClInclude Include="SineFactory.h" />
     <ClInclude Include="SinePattern.h" />
     <ClInclude Include="SpaceShip.h" />
     <ClInclude Include="Planet04.h" />
     <ClInclude Include="SpiralPattern.h" />
     <ClInclude Include="SSJFactory.h" />
+    <ClInclude Include="Title.h" />
     <ClInclude Include="Unit.h" />
   </ItemGroup>
   <ItemGroup>
