--- a/BridgeShooter/BridgeShooter.vcxproj.filters
+++ b/BridgeShooter/BridgeShooter.vcxproj.filters
@@ -312,7 +312,6 @@
     <ClInclude Include="ReverseSinePattern.h">
       <Filter>소스 파일\Pattern</Filter>
     </ClInclude>
-
     <ClInclude Include="UI.h">
       <Filter>소스 파일\Bridge\UI</Filter>
     </ClInclude>
@@ -321,7 +320,7 @@
     </ClInclude>
     <ClInclude Include="ProgressBar.h">
       <Filter>헤더 파일</Filter>
-</ClCompile>
+ </ClInclude>
     <ClInclude Include="Title.h">
       <Filter>소스 파일\Scene</Filter>
     </ClInclude>
