유도 패턴 추가중

--- a/BridgeShooter/BridgeShooter.vcxproj
+++ b/BridgeShooter/BridgeShooter.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="DelayBasicPattern.cpp" />
     <ClCompile Include="EffectManager.cpp" />
     <ClCompile Include="Factory.cpp" />
+    <ClCompile Include="GuidePattern.cpp" />
     <ClCompile Include="HPgauge.cpp" />
     <ClCompile Include="JinHwang.cpp" />
     <ClCompile Include="Planet04Factory.cpp" />
@@ -197,6 +198,7 @@
     <ClInclude Include="Factory.h" />
     <ClInclude Include="BasicPattern.h" />
     <ClInclude Include="BoomerangPattern.h" />
+    <ClInclude Include="GuidePattern.h" />
     <ClInclude Include="HPgauge.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="JinHwang.h" />
