PlanetSSJ 컨트롤러 무빙

--- a/BridgeShooter/BridgeShooter.vcxproj
+++ b/BridgeShooter/BridgeShooter.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="BasicFactory.cpp" />
     <ClCompile Include="BasicPattern.cpp" />
     <ClCompile Include="CircleMovePattern.cpp" />
+    <ClCompile Include="FileManager.cpp" />
     <ClCompile Include="JinHwangAIContoller.cpp" />
     <ClCompile Include="Planet_KMS_Factory.cpp" />
     <ClCompile Include="BoomerangPattern.cpp" />
@@ -184,6 +185,7 @@
     <ClCompile Include="SpaceShip_Gray.cpp" />
     <ClCompile Include="SpaceShip_Red.cpp" />
     <ClCompile Include="SpiralPattern.cpp" />
+    <ClCompile Include="SSJAIController.cpp" />
     <ClCompile Include="SSJFactory.cpp" />
     <ClCompile Include="UI.cpp" />
     <ClCompile Include="Title.cpp" />
@@ -194,6 +196,7 @@
     <ClInclude Include="Animation.h" />
     <ClInclude Include="BasicFactory.h" />
     <ClInclude Include="CircleMovePattern.h" />
+    <ClInclude Include="FileManager.h" />
     <ClInclude Include="JinHwangAIContoller.h" />
     <ClInclude Include="Planet_KMS_Factory.h" />
     <ClInclude Include="BridgeShooter.h" />
@@ -236,6 +239,7 @@
     <ClInclude Include="SpaceShip_Gray.h" />
     <ClInclude Include="SpaceShip_Red.h" />
     <ClInclude Include="SpiralPattern.h" />
+    <ClInclude Include="SSJAIController.h" />
     <ClInclude Include="SSJFactory.h" />
     <ClInclude Include="UI.h" />
     <ClInclude Include="Title.h" />
