잠몹 컨트롤러 추가

--- a/BridgeShooter/BridgeShooter.vcxproj
+++ b/BridgeShooter/BridgeShooter.vcxproj
@@ -142,6 +142,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AIController.cpp" />
+    <ClCompile Include="AlienAIController.cpp" />
+    <ClCompile Include="AlienBlue.cpp" />
+    <ClCompile Include="AlienGreen.cpp" />
+    <ClCompile Include="AlienRed.cpp" />
+    <ClCompile Include="AlienYellow.cpp" />
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="BasicFactory.cpp" />
     <ClCompile Include="BasicPattern.cpp" />
@@ -153,7 +158,6 @@
     <ClCompile Include="DataManager.cpp" />
     <ClCompile Include="DelayBasicPattern.cpp" />
     <ClCompile Include="EffectManager.cpp" />
-    <ClCompile Include="EnemyGroup.cpp" />
     <ClCompile Include="Factory.cpp" />
     <ClCompile Include="GuidePattern.cpp" />
     <ClCompile Include="HPgauge.cpp" />
@@ -192,6 +196,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AIController.h" />
+    <ClInclude Include="AlienAIController.h" />
+    <ClInclude Include="AlienBlue.h" />
+    <ClInclude Include="AlienGreen.h" />
+    <ClInclude Include="AlienRed.h" />
+    <ClInclude Include="AlienYellow.h" />
     <ClInclude Include="Animation.h" />
     <ClInclude Include="BasicFactory.h" />
     <ClInclude Include="CircleMovePattern.h" />
@@ -203,7 +212,6 @@
     <ClInclude Include="Controller.h" />
     <ClInclude Include="DelayBasicPattern.h" />
     <ClInclude Include="EffectManager.h" />
-    <ClInclude Include="EnemyGroup.h" />
     <ClInclude Include="Factory.h" />
     <ClInclude Include="BasicPattern.h" />
     <ClInclude Include="BoomerangPattern.h" />
