--- a/BridgeShooter/BridgeShooter.vcxproj.filters
+++ b/BridgeShooter/BridgeShooter.vcxproj.filters
@@ -238,7 +238,7 @@
       <Filter>소스 파일\Scene</Filter>
     </ClCompile>
     <ClCompile Include="AlienAIController.cpp">
-      <Filter>소스 파일\Controller</Filter>
+      <Filter>소스 파일\Engine\Controller</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -438,7 +438,7 @@
       <Filter>소스 파일\Scene</Filter>
     </ClInclude>
     <ClInclude Include="AlienAIController.h">
-      <Filter>소스 파일\Controller</Filter>
+      <Filter>소스 파일\Engine\Controller</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
