MoveInfo 삭제 및 GameObject의 맴버변수 -> Transform으로 이동관련 변수만 옮김

--- a/BridgeShooter/BridgeShooter.vcxproj
+++ b/BridgeShooter/BridgeShooter.vcxproj
@@ -151,13 +151,13 @@
     <ClCompile Include="BasicFactory.cpp" />
     <ClCompile Include="BasicPattern.cpp" />
     <ClCompile Include="CircleMovePattern.cpp" />
+    <ClCompile Include="GuideBasicPattern.cpp" />
     <ClCompile Include="JinHwangAIContoller.cpp" />
     <ClCompile Include="KmsAIController.cpp" />
     <ClCompile Include="Planet04AIController.cpp" />
     <ClCompile Include="Planet_KMS_Factory.cpp" />
     <ClCompile Include="BoomerangPattern.cpp" />
     <ClCompile Include="DataManager.cpp" />
-    <ClCompile Include="DelayBasicPattern.cpp" />
     <ClCompile Include="EffectManager.cpp" />
     <ClCompile Include="Factory.cpp" />
     <ClCompile Include="GuidePattern.cpp" />
@@ -178,8 +178,6 @@
     <ClCompile Include="Planet_KMS.cpp" />
     <ClCompile Include="Planet_SSJ.cpp" />
     <ClCompile Include="ReflectPattern.cpp" />
-    <ClCompile Include="ReverseSinePattern.cpp" />
-    <ClCompile Include="ReverseSpiralPattern.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="SelectPlayer.cpp" />
     <ClCompile Include="SineFactory.cpp" />
@@ -206,6 +204,7 @@
     <ClInclude Include="Animation.h" />
     <ClInclude Include="BasicFactory.h" />
     <ClInclude Include="CircleMovePattern.h" />
+    <ClInclude Include="GuideBasicPattern.h" />
     <ClInclude Include="JinHwangAIContoller.h" />
     <ClInclude Include="KmsAIController.h" />
     <ClInclude Include="Planet04AIController.h" />
@@ -213,7 +212,6 @@
     <ClInclude Include="BridgeShooter.h" />
     <ClInclude Include="DataManager.h" />
     <ClInclude Include="Controller.h" />
-    <ClInclude Include="DelayBasicPattern.h" />
     <ClInclude Include="EffectManager.h" />
     <ClInclude Include="Factory.h" />
     <ClInclude Include="BasicPattern.h" />
@@ -237,8 +235,6 @@
     <ClInclude Include="Planet_KMS.h" />
     <ClInclude Include="Planet_SSJ.h" />
     <ClInclude Include="ReflectPattern.h" />
-    <ClInclude Include="ReverseSinePattern.h" />
-    <ClInclude Include="ReverseSpiralPattern.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="SelectPlayer.h" />
     <ClInclude Include="SineFactory.h" />
