--- a/BridgeShooter/BridgeShooter.vcxproj.filters
+++ b/BridgeShooter/BridgeShooter.vcxproj.filters
@@ -234,6 +234,9 @@
     <ClCompile Include="AlienAIController.cpp">
       <Filter>소스 파일\Engine\Controller</Filter>
     </ClCompile>
+    <ClCompile Include="GameClear.cpp">
+      <Filter>소스 파일\Scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ImageManager.h">
@@ -427,6 +430,9 @@
     </ClInclude>
     <ClInclude Include="AlienAIController.h">
       <Filter>소스 파일\Engine\Controller</Filter>
+    </ClInclude>
+    <ClInclude Include="GameClear.h">
+      <Filter>소스 파일\Scene</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
