--- a/BridgeShooter/BridgeShooter.vcxproj.filters
+++ b/BridgeShooter/BridgeShooter.vcxproj.filters
@@ -55,6 +55,12 @@
     <Filter Include="소스 파일\Engine\Controller\Super">
       <UniqueIdentifier>{c34292eb-07ee-4ebb-b058-5e869c9de9e6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\UI\Super">
+      <UniqueIdentifier>{622c57b4-454f-4917-b07c-e60080cbb24a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="소스 파일\GameObject\Unit\Super">
+      <UniqueIdentifier>{49bc75fb-62a2-457f-b603-67b72ce3b002}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -77,9 +83,6 @@
     </ClCompile>
     <ClCompile Include="MainGame.cpp">
       <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Unit.cpp">
-      <Filter>소스 파일\GameObject\Unit</Filter>
     </ClCompile>
     <ClCompile Include="SpaceShip.cpp">
       <Filter>소스 파일\GameObject\Unit</Filter>
@@ -159,9 +162,6 @@
     <ClCompile Include="SSJFactory.cpp">
       <Filter>소스 파일\Factory</Filter>
     </ClCompile>
-    <ClCompile Include="UI.cpp">
-      <Filter>소스 파일\UI</Filter>
-    </ClCompile>
     <ClCompile Include="UIobject.cpp">
       <Filter>소스 파일\UI</Filter>
     </ClCompile>
@@ -237,6 +237,9 @@
     <ClCompile Include="GameClear.cpp">
       <Filter>소스 파일\Scene</Filter>
     </ClCompile>
+    <ClCompile Include="Unit.cpp">
+      <Filter>소스 파일\GameObject\Unit\Super</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ImageManager.h">
@@ -256,9 +259,6 @@
     </ClInclude>
     <ClInclude Include="KeyManager.h">
       <Filter>소스 파일\Engine\Manager</Filter>
-    </ClInclude>
-    <ClInclude Include="Unit.h">
-      <Filter>소스 파일\GameObject\Unit</Filter>
     </ClInclude>
     <ClInclude Include="SpaceShip.h">
       <Filter>소스 파일\GameObject\Unit</Filter>
@@ -347,9 +347,6 @@
     <ClInclude Include="BridgeShooter.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="UI.h">
-      <Filter>소스 파일\UI</Filter>
-    </ClInclude>
     <ClInclude Include="UIobject.h">
       <Filter>소스 파일\UI</Filter>
     </ClInclude>
@@ -433,6 +430,12 @@
     </ClInclude>
     <ClInclude Include="GameClear.h">
       <Filter>소스 파일\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="UI.h">
+      <Filter>소스 파일\UI\Super</Filter>
+    </ClInclude>
+    <ClInclude Include="Unit.h">
+      <Filter>소스 파일\GameObject\Unit\Super</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
